@@ -268,6 +268,9 @@ C-API
 Library
 -------
 
+- Issue #7494: fix a crash in _lsprof (cProfile) after clearing the profiler,
+  reset also the pointer to the current pointer context.
+
 - Issue #7232: Add support for the context manager protocol to the TarFile
   class.
 
